Fix: change links color on IEO details
Fix: timer font style

--- a/src/plugins/ieo/components/IEODetails/IEODetails.pcss
+++ b/src/plugins/ieo/components/IEODetails/IEODetails.pcss
@@ -61,7 +61,7 @@
 
         &__second-column {
           &-link {
-            color: var(--button-primary);
+            color: var(--accent);
             text-decoration: none;
 
             &:hover {
